--- a/jupyter_test/Stock_Price_Sample.ipynb
+++ b/jupyter_test/Stock_Price_Sample.ipynb
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x123bd4710>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11956bd90>"
       ]
      },
      "execution_count": 3,
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "      selection='cyclic', tol=0.0001, warm_start=False)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12826b990>"
+       "<matplotlib.legend.Legend at 0x1061fcb50>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -412,6 +412,13 @@
     "plt.plot(predicted_dates, lasso_model_forecast_prediction, label='Lasso')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
