신규 학습 모델 적용

--- a/jupyter_test/Stock_Price_Sample.ipynb
+++ b/jupyter_test/Stock_Price_Sample.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "2019-09-03  5989397  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11d4b4c90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12283d490>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.64471965e-01 -5.23999137e-02  1.57313798e-01 -5.49909950e-01\n",
-      "  1.59157185e+00  5.91703323e-09] 5.5497244628740106\n"
+      "[-5.07656066e-01  3.50362219e-01  3.77980666e-01 -7.80206936e-01\n",
+      "  1.54309858e+00  2.62534324e-08] 5.031843733531289\n"
      ]
     },
     {
@@ -277,7 +277,7 @@
        "      selection='cyclic', tol=0.0001, warm_start=False)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearModel Score: 0.9674065173546317\n",
-      "RidgeModel Score: 0.967408030170158\n",
-      "LassoModel Score: 0.9672436582484243\n"
+      "LinearModel Score: 0.9713773590772714\n",
+      "RidgeModel Score: 0.9713812206548037\n",
+      "LassoModel Score: 0.9717384870987817\n"
      ]
     }
    ],
@@ -340,14 +340,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.41649994e+02, 1.42539993e+02, 1.40270004e+02, 1.41259995e+02,\n",
+       "        1.41259995e+02, 7.51450000e+06],\n",
+       "       [1.41399994e+02, 1.41589996e+02, 1.40399994e+02, 1.41289993e+02,\n",
+       "        1.41289993e+02, 5.89660000e+06],\n",
+       "       [1.41399994e+02, 1.43229996e+02, 1.41039993e+02, 1.43210007e+02,\n",
+       "        1.43210007e+02, 7.29440000e+06],\n",
+       "       [1.43740005e+02, 1.45190002e+02, 1.43050003e+02, 1.44649994e+02,\n",
+       "        1.44649994e+02, 8.13940000e+06],\n",
+       "       [1.45589996e+02, 1.47149994e+02, 1.45169998e+02, 1.46389999e+02,\n",
+       "        1.46389999e+02, 1.16741000e+07],\n",
+       "       [1.45759995e+02, 1.46800003e+02, 1.44610001e+02, 1.44929993e+02,\n",
+       "        1.44929993e+02, 6.56310000e+06],\n",
+       "       [1.44990005e+02, 1.45000000e+02, 1.42339996e+02, 1.43009995e+02,\n",
+       "        1.43009995e+02, 9.71070000e+06],\n",
+       "       [1.43339996e+02, 1.44529999e+02, 1.41259995e+02, 1.41850006e+02,\n",
+       "        1.41850006e+02, 8.91170000e+06],\n",
+       "       [1.40990005e+02, 1.42220001e+02, 1.39940002e+02, 1.41710007e+02,\n",
+       "        1.41710007e+02, 6.53910000e+06],\n",
+       "       [1.39139999e+02, 1.40229996e+02, 1.37029999e+02, 1.38300003e+02,\n",
+       "        1.38300003e+02, 1.06697000e+07],\n",
+       "       [1.40410004e+02, 1.41949997e+02, 1.38369995e+02, 1.41869995e+02,\n",
+       "        1.41869995e+02, 1.88189000e+07],\n",
+       "       [1.34929993e+02, 1.35869995e+02, 1.32259995e+02, 1.34860001e+02,\n",
+       "        1.34860001e+02, 2.90845000e+07],\n",
+       "       [1.37899994e+02, 1.38000000e+02, 1.36009995e+02, 1.37889999e+02,\n",
+       "        1.37889999e+02, 1.40548000e+07],\n",
+       "       [1.37100006e+02, 1.39240005e+02, 1.36759995e+02, 1.38520004e+02,\n",
+       "        1.38520004e+02, 8.81190000e+06],\n",
+       "       [1.37309998e+02, 1.37570007e+02, 1.35229996e+02, 1.35750000e+02,\n",
+       "        1.35750000e+02, 7.47330000e+06],\n",
+       "       [1.35000000e+02, 1.37919998e+02, 1.35000000e+02, 1.37009995e+02,\n",
+       "        1.37009995e+02, 8.14540000e+06],\n",
+       "       [1.35059998e+02, 1.35149994e+02, 1.32679993e+02, 1.32850006e+02,\n",
+       "        1.32850006e+02, 1.17977000e+07],\n",
+       "       [1.33500000e+02, 1.34279999e+02, 1.32470001e+02, 1.33410004e+02,\n",
+       "        1.33410004e+02, 7.59010000e+06],\n",
+       "       [1.34020004e+02, 1.35500000e+02, 1.33830002e+02, 1.35199997e+02,\n",
+       "        1.35199997e+02, 6.35380000e+06],\n",
+       "       [1.36789993e+02, 1.37619995e+02, 1.34279999e+02, 1.35289993e+02,\n",
+       "        1.35289993e+02, 1.17418000e+07],\n",
+       "       [1.33330002e+02, 1.36039993e+02, 1.33259995e+02, 1.35130005e+02,\n",
+       "        1.35130005e+02, 8.62800000e+06],\n",
+       "       [1.34610001e+02, 1.36059998e+02, 1.34050003e+02, 1.35759995e+02,\n",
+       "        1.35759995e+02, 6.32500000e+06],\n",
+       "       [1.36199997e+02, 1.36669998e+02, 1.34690002e+02, 1.36080002e+02,\n",
+       "        1.36080002e+02, 6.96710000e+06],\n",
+       "       [1.35509995e+02, 1.36440002e+02, 1.31020004e+02, 1.31669998e+02,\n",
+       "        1.31669998e+02, 1.01909000e+07],\n",
+       "       [1.34190002e+02, 1.34639999e+02, 1.32550003e+02, 1.34610001e+02,\n",
+       "        1.34610001e+02, 8.09380000e+06],\n",
+       "       [1.35770004e+02, 1.35990005e+02, 1.34190002e+02, 1.34490005e+02,\n",
+       "        1.34490005e+02, 6.01360000e+06],\n",
+       "       [1.34059998e+02, 1.36729996e+02, 1.33520004e+02, 1.36550003e+02,\n",
+       "        1.36550003e+02, 5.95050000e+06],\n",
+       "       [1.38119995e+02, 1.38679993e+02, 1.37419998e+02, 1.37839996e+02,\n",
+       "        1.37839996e+02, 6.53270000e+06],\n",
+       "       [1.38289993e+02, 1.38500000e+02, 1.36759995e+02, 1.37259995e+02,\n",
+       "        1.37259995e+02, 5.62220000e+06],\n",
+       "       [1.36369995e+02, 1.36419998e+02, 1.35059998e+02, 1.36309998e+02,\n",
+       "        1.36309998e+02, 5.98939700e+06]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_forecast = np.array(df.drop(['Prediction'], 1))[-forecast_out:]\n",
     "linear_model_forecast_prediction = linear_model.predict(x_forecast)\n",
     "ridge_model_forecast_prediction = ridge_model.predict(x_forecast)\n",
-    "lasso_model_forecast_prediction = lasso_model.predict(x_forecast)"
+    "lasso_model_forecast_prediction = lasso_model.predict(x_forecast)\n",
+    "x_forecast"
    ]
   },
   {
